--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -7,22 +7,130 @@
         android:layout_height="match_parent"
         tools:context=".Services">
 
+    <TextView
+            android:id="@+id/textView3"
+            android:layout_width="241dp"
+            android:layout_height="35dp"
+            android:text="Wybierz zakres pracy:"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/costOfWork"
+            app:layout_constraintVertical_bias="0.08" />
+
     <SeekBar
+            android:id="@+id/costOfWork"
+            style="@style/Widget.AppCompat.SeekBar"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/costOfWork"
-            app:layout_constraintVertical_bias="0.319" app:layout_constraintHorizontal_bias="0.497"
-            style="@style/Widget.AppCompat.SeekBar"/>
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewCost"
+            app:layout_constraintVertical_bias="0.06" />
+
     <TextView
+            android:id="@+id/viewCost"
+            android:layout_width="29dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.081" />
+
+    <TextView
+            android:id="@+id/textView2"
+            android:layout_width="310dp"
+            android:layout_height="39dp"
+            android:text="Wybierz czas pracy (w min):"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tytulUslugi"
+            app:layout_constraintVertical_bias="0.048" />
+
+    <RadioGroup
+            android:id="@+id/opcjePracy"
+            android:layout_width="169dp"
+            android:layout_height="143dp"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintVertical_bias="0.124">
+
+        <RadioButton
+                android:id="@+id/strzyzenieMeskie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Strzyżenie męskie" />
+
+        <RadioButton
+                android:id="@+id/strzyzenieDamskie"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Strzyżenie damskie" />
+
+        <RadioButton
+                android:id="@+id/koloryzacja"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Koloryzacja" />
+    </RadioGroup>
+
+    <Button
+            android:id="@+id/obliczWartoscPracy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/viewCost" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/costOfWork"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            android:text="Oblicz"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/wpiszWartosc" />
+
+    <TextView
+            android:id="@+id/wpiszWartosc"
+            android:layout_width="308dp"
+            android:layout_height="54dp"
+            android:text="Wartość wynosi: "
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/opcjePracy"
+            app:layout_constraintVertical_bias="0.262" />
+
+    <TextView
+            android:id="@+id/tytulUslugi"
+            android:layout_width="384dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="Oblicz wartość wykonanej usługi"
+            android:textSize="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.048" />
 
 </android.support.constraint.ConstraintLayout>
